# ICP-test

./: CMakeLists.txt  README.md
data/bunny/: README.md
data/pcl_data/: README.md
src/: feature.cpp  icp3_with_normal_iterative_view.cpp  icp4_after_feature_registration.cpp  icp_view.cpp  icpwithnormal_view.cpp  iterative_closest_point.cpp  transform_estimation.cpp  visualize_correspondences.cpp  visualize_correspondences.h
